Fixed Too big headings on Mobile

--- a/docs-assets/css/docs.css
+++ b/docs-assets/css/docs.css
@@ -209,6 +209,13 @@ body {
   color: #cdbfe3;
   background-color: #563d7c;
 }
+@media (max-width: 768px) {
+  .bs-header{
+    padding-top: 6px;
+    padding-top: 6px;
+  }
+}
+
 
 
 /*
